--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Contra</title>
   </head>
   <body>
-    <!-- <script src="./node_modules/pixi.js/dist/pixi.js"></script> -->
-    <script src="./scripts/index.js" type="module"></script>
+    <script src="./src/index.js" type="module"></script>
   </body>
 </html>
